SingleProcessMash: Fix touch dragging

Call WindowTree::PerformDragDrop with the source window, not the root.
Fixes touch drag and drop interaction with bookmarks, Files app, etc.

TODO: Fix SingleProcessMash long tap and release without dragging.

Bug: 922253
Change-Id: I2bc9cabbf5b8dec9399dfdf8110915a8ca445fbe
Reviewed-on: https://chromium-review.googlesource.com/c/1436171
Auto-Submit: Michael Wasserman <msw@chromium.org>
Reviewed-by: Scott Violet <sky@chromium.org>
Commit-Queue: Scott Violet <sky@chromium.org>
Cr-Commit-Position: refs/heads/master@{#626743}
Former-commit-id: f6965f0c9accfb2a22ce3dfc9528ecc49c7ce1e6